Paper bowl and player content bugfix